# libromi

./: .gitignore  .travis.old  .travis.yml  CMakeLists.txt  README.md  codecov.yml
arduino_libraries/: CMakeLists.txt
arduino_libraries/RomiSerial/: ArduinoSerial.cpp  ArduinoSerial.h  CRC8.cpp  CRC8.h  EnvelopeParser.cpp  EnvelopeParser.h  IInputStream.h  IOutputStream.h  IRomiSerial.h  IRomiSerialClient.h  Log.h  MessageParser.cpp  MessageParser.h  RSerial.cpp  RSerial.h  Reader.h  RomiSerial.cpp  RomiSerial.h  RomiSerialClient.cpp  RomiSerialClient.h  Util.cpp
arduino_libraries/test/: CMakeLists.txt
arduino_libraries/test/mock/: mock_inputstream.h  mock_outputstream.h
arduino_libraries/test/src/: test_envelope_parser.cpp  test_message_parser.cpp  test_romiserial.cpp  test_romiserial_arduino.cpp  test_romiserialclient.cpp
binortools/: CMakeLists.txt
binortools/arm32/lib/: libflatzinc.so.8  libflatzinc.so.8.2.8710  libortools.so.8
binortools/x86_64/include/: ortools_export.h
binortools/x86_64/lib/: libflatzinc.so.8.2.8710
firmware/Azhoo/tests/: CMakeLists.txt
libromi/: CMakeLists.txt
libromi/include/: ActivityHelper.h  BldcGimbal.h  BrushMotorDriver.h  CameraServer.h  CrystalDisplay.h  DebugWeedingSession.h  DefaultNavigation.h  FileCamera.h  FluidSoundNotifications.h  GetOpt.h  IEventTimer.h  IFolder.h  IMotorDriver.h  IScriptEngine.h  ISpeedController.h  Image.h  ImageIO.h  JoystickInputDevice.h  LinuxJoystick.h  Navigation.h  NavigationSettings.h  Options.h  ScriptEngine.h  ScriptList.h  ScriptMenu.h  SpeedController.h  USBCamera.h  WheelOdometry.h  v.h  v3.h
libromi/include/api/: CNCRange.h  Display.h  EventTimer.h  IActivity.h  ICNC.h  ICamera.h  IDisplay.h  IEventSource.h  IGimbal.h  IImager.h  IInputDevice.h  IJoystick.h  IMotorDriver.h  INavigation.h  INotifications.h  IPowerDevice.h  IWeeder.h  Joystick.h  Path.h  StateMachine.h
libromi/include/arm/: CameraComponent.h  Component.h
libromi/include/camera/: FakeImager.h  FileCamera.h  Imager.h  USBCamera.h
libromi/include/configuration/: ConfigurationProvider.h  GetOpt.h  IOptions.h
libromi/include/cv/: ConnectedComponents.h  ConnectedComponentsImage.h  EigenIncludes.h  IConnectedComponents.h  IConnectedComponentsImage.h  IImageCropper.h  IPrincipalComponentAnalysis.h  Image.h  ImageCropper.h  ImageIO.h  Point.h  PrincipalComponentAnalysis.h  connected.h  cv.h  stb_image_write.h  stb_includes.h
libromi/include/data_provider/: Gps.h  GpsLocationProvider.h  IGPS.h  IIdentityProvider.h  ILocationProvider.h  IOrientationProvider.h  IRomiDeviceData.h  ISoftwareVersion.h  JsonFieldNames.h  RomiDeviceData.h  RoverIdentityProvider.h  SoftwareVersion.h
libromi/include/debug_tools/: debug_data_dumper.h
libromi/include/fake/: FakeCNC.h  FakeDisplay.h  FakeInputDevice.h  FakeMotorDriver.h  FakeNavigation.h  FakeNotifications.h  FakeScriptEngine.h  FakeWeeder.h
libromi/include/hal/: BldcGimbal.h  BrushMotorDriver.h
libromi/include/notifications/: FluidSoundNotifications.h
libromi/include/oquam/: ATDC.h  CNCController.h  FakeCNCController.h  ICNCController.h  Oquam.h  OquamSettings.h  SmoothPath.h  StepperController.h  StepperSettings.h  is_valid.h  plotter.h
libromi/include/picamera/: Connection.h  EncoderComponent.h  MMAL.h  PiCamera.h  PiCameraIncludes.h  PiCameraSettings.h  Semaphore.h
libromi/include/rover/: EventsAndStates.h  IDistanceMeasure.h  INavigationController.h  IPoseEstimator.h  ISpeedController.h  ITrackFollower.h  L1NavigationController.h  LocationTracker.h  Navigation.h  NavigationSettings.h  PythonTrackFollower.h  Rover.h  RoverNotifications.h  RoverOptions.h  RoverScriptEngine.h  RoverStateMachine.h  SpeedController.h  SpeedConverter.h  WheelOdometry.h  ZeroNavigationController.h
libromi/include/rpc/: CNCAdaptor.h  CameraAdaptor.h  GimbalAdaptor.h  IRPCClient.h  IRPCHandler.h  IRPCServer.h  MethodsCamera.h  MethodsGimbal.h  MethodsRover.h  NavigationAdaptor.h  RPCError.h  RcomClient.h  RcomMessageHandler.h  RcomServer.h  RemoteCNC.h  RemoteCamera.h  RemoteGimbal.h  RemoteNavigation.h  RemoteStub.h  RemoteWeeder.h  WeederAdaptor.h
libromi/include/session/: IMetaFolder.h  ISession.h  MetaFolder.h  Session.h
libromi/include/ui/: IJoystickEventMapper.h  IScriptEngine.h  JoystickInputDevice.h  LinuxJoystick.h  ScriptList.h  ScriptMenu.h  UIEventMapper.h
libromi/include/weeder/: IImageCropper.h  IImageSegmentation.h  IPathPlanner.h  IPipeline.h  ISession.h  ImageCropper.h  MetaFolder.h  Pipeline.h  PipelineFactory.h  Session.h  Weeder.h
libromi/include/weeder_session/: IMetaFolder.h  ISession.h  IWeederSession.h  MetaFolder.h  Session.h  WeederSession.h
libromi/src/: BldcGimbal.cpp  BrushMotorDriver.cpp  DebugWeedingSession.cpp  DefaultSpeedController.cpp  EventTimer.cpp  GetOpt.cpp  Image.cpp  ImageIO.cpp  Navigation.cpp  ScriptList.cpp  ScriptMenu.cpp  SpeedController.cpp  WheelOdometry.cpp  v3.cpp
libromi/src/api/: ActivityHelper.cpp  CNCRange.cpp  EventTimer.cpp  Path.cpp
libromi/src/arm/: Component.cpp  EncoderComponent.cpp  MMAL.cpp  PiCameraSettings.cpp  PiCameraTest.cpp  Semaphore.cpp
libromi/src/camera/: CameraServer.cpp  FileCamera.cpp  Imager.cpp  USBCamera.cpp  camera_v4l.c  camera_v4l.h
libromi/src/configuration/: ConfigurationProvider.cpp  GetOpt.cpp
libromi/src/cv/: ConnectedComponents.cpp  ConnectedComponentsImage.cpp  Image.cpp  ImageCropper.cpp  ImageIO.cpp  PrincipalComponentAnalysis.cpp  Superpixels.cpp  Superpixels.h  cv.cpp  slic.cpp
libromi/src/data_provider/: Gps.cpp  GpsLocationProvider.cpp  RomiDeviceData.cpp  RoverIdentityProvider.cpp  SoftwareVersion.cpp
libromi/src/debug_tools/: debug_data_dumper.cpp
libromi/src/fake/: FakeScriptEngine.cpp
libromi/src/hal/: BldcGimbal.cpp  BrushMotorDriver.cpp
libromi/src/notifications/: FluidSoundNotifications.cpp
libromi/src/oquam/: ATDC.cpp  Oquam.cpp  OquamSettings.cpp  Section.cpp  SmoothPath.cpp  StepperController.cpp  StepperSettings.cpp  is_valid.cpp  plotter.cpp
libromi/test/: CMakeLists.txt
test/: CMakeLists.txt
test/src/: cnc_range_tests.cpp  rover_tests.cpp
(+292 files in other folders)
